# mint.rs

./: .gitignore  Cargo.toml  README.md  build.rs
examples/: clear.rs  input.rs  panic.rs  window.rs
src/: core.rs  lib.rs
src/core/: config.rs  mod.rs  monitor.rs
src/graphics/: gl.rs  mod.rs  state.rs
src/graphics/shader/: frag.glsl  main.glsl  vert.glsl
src/input/: mod.rs
