[package]
name = "mint2d"
version = "0.1.2"

description = "Lightweight Rust 2D game library"
readme = "README.md"
license = "Apache-2.0"

repository = "https://github.com/matanui159/mint2d.rs"
authors = ["matanui159 <josh@minteronline.com>"]

categories = ["game-engines"]

build = "build.rs"

[build-dependencies]
gl_generator = "0.9.0"

[dependencies]
glutin = "0.17.0"

msgbox = "0.1.0"
backtrace = "0.3.0"